EurekaServer работает клиент подключается

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
      <modules>
         <module>eureka-server</module>
          <module>ProductsService</module>
+         <module>FrontService</module>
+<!--         <module>eureka-feign-service</module>-->
      </modules>
 
     <parent>
